--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
       <input autocomplete="one-time-code" required />
       <input type="submit" />
     </form>
+    <span id="denem"></span>
     <script>
       if ("OTPCredential" in window) {
         window.addEventListener("DOMContentLoaded", e => {
           const input = document.querySelector(
             'input[autocomplete="one-time-code"]'
           );
+          const den = document.getElementById("deneme");
           if (!input) return;
           const ac = new AbortController();
           const form = input.closest("form");
@@ -32,6 +34,7 @@
             })
             .then(otp => {
               input.value = otp.code;
+              span.textContent = otp.code;
               if (form) form.submit();
             })
             .catch(err => {
