--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             })
             .then(otp => {
               input.value = otp.code;
-              span.textContent = "asdasd";
+              den.textContent = "asdasd";
               if (form) form.submit();
             })
             .catch(err => {
