--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           const input = document.querySelector(
             'input[autocomplete="one-time-code"]'
           );
-          const den = document.getElementById("deneme");
+          const den = document.getElementById("denem");
           if (!input) return;
           const ac = new AbortController();
           const form = input.closest("form");
