--- a/index.html
+++ b/index.html
@@ -15,20 +15,15 @@
     <script>
       if ("OTPCredential" in window) {
         window.addEventListener("DOMContentLoaded", e => {
-          const input = document.querySelector(
-            'input[autocomplete="one-time-code"]'
-          );
           const den = document.getElementById("denem");
           den.textContent = "asdasd";
-
-          if (!input) return;
           const ac = new AbortController();
-          const form = input.closest("form");
-          if (form) {
-            form.addEventListener("submit", e => {
-              ac.abort();
-            });
-          }
+          // const form = input.closest("form");
+          // if (form) {
+          //   form.addEventListener("submit", e => {
+          //     ac.abort();
+          //   });
+          // }
           navigator.credentials
             .get({
               otp: { transport: ["sms"] },
@@ -36,10 +31,11 @@
             })
             .then(otp => {
               input.value = otp.code;
-              if (form) form.submit();
+              den.textContent = otp.code;
             })
             .catch(err => {
               console.log(err);
+              den.textContent = err;
             });
         });
       }
