--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       if ("OTPCredential" in window) {
         window.addEventListener("DOMContentLoaded", e => {
           const den = document.getElementById("denem");
-          den.textContent = "asdasd";
+          den.textContent = "1";
           const ac = new AbortController();
           // const form = input.closest("form");
           // if (form) {
