--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="/verify-otp" method="POST">
+    <form action="/" method="POST">
       <input
         type="text"
         inputmode="numeric"
